# glt

./: CMakeLists.txt  README.md  todos.txt
examples/: CMakeLists.txt
examples/01_window/: CMakeLists.txt  main.c
examples/01_window_example/: CMakeLists.txt  main.c
examples/02_triangle/: CMakeLists.txt  main.c
examples/02_triangle_example/: CMakeLists.txt  main.c
examples/03_texture_triangle/: CMakeLists.txt  main.c
examples/03_texture_triangle_example/: CMakeLists.txt  main.c
examples/03_texture_triangle_example/shaders/: shader.frag  shader.vert
examples/t/: CMakeLists.txt  main.c
examples/triangle/: CMakeLists.txt  main.c
include/: glt.h  glt_color.h  glt_glad_wrapper.h  glt_info.h  glt_log.h  glt_math.h  glt_shader.h  glt_texture.h  glt_vertex_array.h  glt_vertex_buffer.h  glt_window.h
src/: glt.c  glt_glad_wrapper.c  glt_info.c  glt_log.c  glt_math.c  glt_shader.c  glt_texture.c  glt_vertex_array.c  glt_vertex_buffer.c  glt_window.c
test/: CMakeLists.txt  test.c
